kustomizer/tests/kustomizer/testdata/full/envs/dev/core-server-tailscale-funnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-server-funnel
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - "core-server-{{ .ENV }}"
  defaultBackend:
    service:
      name: example-core-server
      port:
        number: 80
